--- a/views/indexLogout.ejs
+++ b/views/indexLogout.ejs
@@ -140,8 +140,10 @@
                     <li><a class="down2" href="#!/">Notebook & PC</a></li>
                     <li><a class="down2" href="#!/">Monitor & TV</a></li>
                     <li><a class="down" href="#!/">Software</a></li>
+                    
                 </ul>
             </div>
+            <a class="phone" href='#!/categ'>Categorie</a>
             <div class="nav-right">   
                     <div class="usericon"></div><a class="userText" href="#!/login">Accedi</a>
             </div>
