--- a/views/indexLogout.ejs
+++ b/views/indexLogout.ejs
@@ -1,8 +1,8 @@
 <link rel="stylesheet" href="././public/css/style.css"/>
 <header>           
             <div class="header">
-                <div class="logo">
-                </div>
+                <a href="#!/"><div class="logo">
+                </div></a>
             <div class="searchbox">
              <form>
              <input type="search" class="form-control" id="mainSearchBox" placeholder="Search"/>
