--- a/public/css/style.css
+++ b/public/css/style.css
@@ -473,14 +473,16 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', end
 
 
     .header {
-      height: 485px;
+      height: 205px;
+
     }
 
     .header .logo {
         background: url("../img/logo.png") 20px no-repeat;
-        background-size: 80%;
-        margin-left: 2%;
-        margin-top: -15%;
+        background-size: 85%;
+        width: 25%;
+        margin-top: -2%;
+        margin-left: 1%;
         position: absolute;
         display: block;
     }
@@ -488,7 +490,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', end
     .header .searchbox {
       width: 75%;
       left: 28%;
-      top: 7%;
+      top: 15%;
     }
 
     .header .searchbox form input[type="search"] {
@@ -502,7 +504,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', end
 
     .header .menu {
         width: 80%;
-        top: 30%;
+        top: 75%;
         left: 2%;
     } 
 
@@ -542,13 +544,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', end
     }
 
     .header .shopCar .shopicon {
-        top: 34%;
+        top: 78%;
         left: 67%;
     }
 
     .header .shopCar .shopText{ 
         font: 25px Helvetica, Arial, sans-serif;
-        top: 35%;
+        top: 80%;
         left: 72%;
     }
 
