--- a/public/css/stylehome.css
+++ b/public/css/stylehome.css
@@ -403,3 +403,83 @@
 .rights {
     text-align: center;
 }
+
+@media only screen and (min-width: 600px) and (max-width: 1200px){
+
+.monitor {
+    width: 44%;
+    margin-top: 4%;
+}
+
+.cpu {
+   margin-left: 20%;
+}
+
+.ram {
+   margin-left: 20%;
+   margin-top: -15%;
+}
+
+.case {
+   margin-left: 20%;
+   margin-top: -6%;
+}
+
+.motherboard {
+    width: 48%;  
+}
+
+.vetrinamotherboard {
+    margin-top: 5%;
+        margin-left: 5%;
+}
+
+.mouse {
+    margin-left: -42%;
+    width: 50%;
+}
+
+.ssd {
+    width: 50%;
+}
+
+.speakers {
+    margin-left: 20%;
+}
+
+.videocard {
+    width: 45%;
+}
+
+.vetrinavideocard {
+    margin-top: -45%;
+        margin-left: 7%;
+}
+
+.product {
+        height: 220px;
+    }
+
+    .product .prezzo{
+        font-size: 1.1em;
+    }
+
+    .product .nome {
+        font-size: 1.3em;
+    }
+
+    .product li{
+        padding: 10px;
+    }
+
+    .product li:first-child{
+      background-size: 80%;
+      height: 200px;
+      margin-left: 20%;
+    }
+
+    .product li:last-child {
+        margin-top: -35%;
+    }
+
+}    
