--- a/public/css/styleSingleProduct.css
+++ b/public/css/styleSingleProduct.css
@@ -263,3 +263,144 @@ button:hover {
 .rights {
     text-align: center;
 }
+
+@media only screen and (min-width: 1200px) and (max-width: 1600px){
+
+    .titolodesc {
+        position: relative;
+        margin-left: 40%;
+        margin-top: -26%;
+    }
+    .descr {
+        position: relative;
+        margin-left: 51%;
+        width: 40%;
+        margin-top: -3%;
+    }
+
+    .cat {
+        position: relative;
+        margin-left: 51%;
+        margin-top: -1.5%;
+    }
+
+    .peso {
+        position: relative;
+        margin-left: 51%;
+        margin-top: -1.5%;
+    }
+
+    .prezzoprod {
+        position: relative;
+        margin-left: 51%;
+        margin-top: -1.5%;
+    }
+
+    .addtitolo {
+        position: relative;
+        margin-left: 40%;
+        margin-top: 2.5%;
+    }
+
+    .addproduct {
+        position: relative;
+        margin-left: 52%;
+        margin-top: -2%;
+    }
+
+    .inputprod {
+        padding: 7.5px;
+    }
+
+    .but {
+        position: relative;
+        margin-left: 63%;
+        margin-top: -2.5%;
+    }
+
+    .avviso {
+        position: relative;
+        margin-left: 42%;
+        margin-top: -1.65%;
+    }
+}   
+
+@media only screen and (min-width: 320px) and (max-width: 1000px){
+
+    .titolodesc {
+        position: relative;
+        margin-left: 40%;
+        margin-top: -35%;
+    }
+
+    .descr {
+        position: relative;
+        margin-left: 55%;
+        width: 40%;
+        margin-top: -4%;
+    }
+
+    .cat {
+        position: relative;
+        margin-left: 55%;
+        margin-top: -2%;
+        margin-bottom: 2%;
+    }
+
+    .peso {
+        position: relative;
+        margin-left: 55%;
+        margin-top: -2.3%;
+        margin-bottom: 2%;
+    }
+
+    .prezzoprod {
+        position: relative;
+        margin-left: 55%;
+        margin-top: -2.3%;
+        margin-bottom: 2%;
+    }
+
+    .addtitolo {
+        position: relative;
+        margin-left: 40%;
+        margin-top: 5%;
+    }
+
+    .addproduct {
+        position: relative;
+        margin-left: 60%;
+        margin-top: -3%;
+    }
+
+    .inputprod {
+        padding: 7.5px;
+    }
+
+    .qtaprod {
+        margin-left: 55%;
+        margin-top: -2.1%; 
+    }
+
+    .pagamenti {
+        margin-top: 3.5%;
+    }
+
+    .freedelivery {
+        margin-top: 8%;
+    }
+
+    .but {
+        position: relative;
+        margin-left: 75.8%;
+        margin-top: -3.4%;
+    }
+
+    .footer {
+        margin-top: 95%;
+    }
+
+    .secondrow {
+    margin-left: 15%;
+    }
+}
