--- a/public/css/styleCategorie.css
+++ b/public/css/styleCategorie.css
@@ -285,6 +285,10 @@
       margin-top: 103%;
     }
 
+    .secondrow {
+    margin-left: 15%;
+    }
+
 }  
 
 @media only screen and (min-width: 1200px) and (max-width: 1400px){
