--- a/public/css/styleLogin.css
+++ b/public/css/styleLogin.css
@@ -148,9 +148,16 @@
 
 @media only screen and (min-width: 320px) and (max-width: 1000px){
 
-.form button {
-	width: 15%;
+	.form button {
+		width: 15%;
+	}
 
-}
+    .footer {
+      margin-top: 113%;
+    }
+
+    .secondrow {
+    margin-left: 15%;
+    }
 
 }	
