Iniziata gestione carrello

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
    <link rel="shortcut icon" type="image/x-icon" href="././public/img/icon/favicon.png" />
 
    <!-- load angular and angular route via CDN -->
-
+     <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" /></script> -->
 	    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
       <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.min.js"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-animate.min.js"></script>
@@ -26,6 +26,7 @@
       <script src="././public/js/service/fileUpload.js"></script>
       <script src="././public/js/product.js"></script>
       <script src="././public/js/dash.js"></script>
+      <script src="././public/service/cartStorage.js"></script>
 	</head>
 <body ng-controller="mainController">
 
