--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,8 @@
       <script src="././public/js/service/fileUpload.js"></script>
       <script src="././public/js/product.js"></script>
       <script src="././public/js/dash.js"></script>
-      <script src="././public/service/cartStorage.js"></script>
+      <script src="././public/js/service/cartStorage.js"></script>
+      <script src="././public/js/cart.js"></script>
 	</head>
 <body ng-controller="mainController">
 
