--- a/views/front-end/home.ejs
+++ b/views/front-end/home.ejs
@@ -9,7 +9,7 @@
         </section>
         <a href='#!/categ'><img class="monitor" ng-click="initCategory('Monitor')" src="././public/img/homepage/monitor.png"></img></a>
     </div>    
-    <a href='#!/categ'><img class="cpu" ng-click="initCategory('Cpu')" src="././public/img/homepage/cpu.png"></img></a>
+    <a href='#!/categ'><img id="cpu" class="cpu" ng-click="initCategory('Cpu')" src="././public/img/homepage/cpu.png"></img></a>
     <a href='#!/categ'><img class="ram" ng-click="initCategory('Ram')" src="././public/img/homepage/ram.png"></img></a>
     <a href='#!/categ'><img class="case" ng-click="initCategory('Case')" src="././public/img/homepage/case.png"></img></a>
     <div class="contmotherboard">
