--- a/views/indexLogout.ejs
+++ b/views/indexLogout.ejs
@@ -12,8 +12,7 @@
             <div class="menu" ng-controller="mainController">
             <div class="nav-center">
                 <ul>
-                    <li class="home"><a href="#!/"><div class="homeicon"></div></a></li>
-                    <li class="menu2"><a class="down" href="#!/">Gaming</a></li>    
+                    <li class="home"><a href="#!/"><div class="homeicon"></div></a></li>                       
                     <li class="menu2"><a class="down" href="#!/">Hardware</a>
                     <ul class="dropdown_5columns"><!-- Begin 5 columns container -->        
             <div class="col_1">
@@ -136,9 +135,10 @@
             </div>
         
         </ul><!-- End 5 columns container --></li>
-                    <li><a class="down3" href="#!/">Periferiche</a></li>
-                    <li><a class="down2" href="#!/">Notebook & PC</a></li>
-                    <li><a class="down2" href="#!/">Monitor & TV</a></li>
+                    <li class="menu2"><a class="down" href="#!/">Gaming</a></li> 
+                    <li><a href="#!/#cpu">Cpu Ram Case</a></li>
+                    <li><a class="down2" href="#!/#motherboard">Schede Madri</a></li>
+                    <li><a class="down2" href="#!/#videocard">Schede Video</a></li>
                     <li><a class="down" href="#!/">Software</a></li>
                     
                 </ul>
