--- a/views/front-end/home.ejs
+++ b/views/front-end/home.ejs
@@ -9,17 +9,21 @@
         </section>
         <a href='#!/categ'><img class="monitor" ng-click="initCategory('Monitor')" src="././public/img/homepage/monitor.png"></img></a>
     </div>    
+    <div id="cpuramcase">
     <a href='#!/categ'><img id="cpu" class="cpu" ng-click="initCategory('Cpu')" src="././public/img/homepage/cpu.png"></img></a>
     <a href='#!/categ'><img class="ram" ng-click="initCategory('Ram')" src="././public/img/homepage/ram.png"></img></a>
     <a href='#!/categ'><img class="case" ng-click="initCategory('Case')" src="././public/img/homepage/case.png"></img></a>
+    </div>
     <div class="contmotherboard">
         <a href='#!/categ'><img ng-click="initCategory('Motherboard')" class="motherboard" src="././public/img/homepage/schedemadri.png"></img></a>
         <section class="vetrinamotherboard" id="motherboard" ng-init="showMotherboards(4)" ng-controller="productsController">
         </section>
     </div>
+    <div id="mousessdspeakers">
     <a href='#!/categ'><img ng-click="initCategory('Mouse&Tastiere')" class="mouse" src="././public/img/homepage/mouse&tastiere.png"></img></a>
     <a href='#!/categ'><img class="ssd" ng-click="initCategory('Ssd')" src="././public/img/homepage/ssd.png"></img></a>
     <a href='#!/categ'><img class="speakers" ng-click="initCategory('Speakers')" src="././public/img/homepage/casse.png"></img></a>
+    </div>
     <div class="contvideocards">
         <a href='#!/categ'><img class="videocard" ng-click="initCategory('Videocard')" src="././public/img/homepage/schedevideo2.png"></img></a>
         <section class="vetrinavideocard" id="videocard" ng-init="showVideoCards(4)" ng-controller="productsController">
